--- a/scss/pages/_hero.scss
+++ b/scss/pages/_hero.scss
@@ -25,6 +25,7 @@
 
         @media only screen and (max-width: 450px) {
             flex-direction: column;
+            align-items: center;
         }
     }
 
